--- a/etc/config.yml
+++ b/etc/config.yml
@@ -10,3 +10,8 @@ gc:
   # are automatically deleted from the database. Changing this value
   # has immediate effect on all existing points.
   retention_period_days: 15
+
+  # Delay in seconds between two GC pass; time between passes can be
+  # longer than this, as this delay is between the end of a pass and
+  # the beginning of another.
+  delay_between_rounds_sec = 3600
