--- a/etc/config.yml
+++ b/etc/config.yml
@@ -1,5 +1,17 @@
 # Configuration file for the Geo Backtracer.
 
+# The backtracer can be of the following types:
+#
+# - "primary": Main handler of the database, performs all write
+#   operations (pushing points, clearing user history, garbage
+#   collection). There can be a single primary instance per
+#   database.
+#
+# - "seeker": Read-only handler of the database, given a user
+#   identifier, retrieves correlations in the database. There can
+#   be multiple seeker instances per database.
+instance_type: "primary"
+
 db:
   # Path to the database, if empty, a temporary database is created
   # and deleted at exit (used for testing).
