feat: add network config settings

--- a/etc/worker.yml
+++ b/etc/worker.yml
@@ -13,6 +13,15 @@ db:
   # and deleted at exit (used for testing).
   path: data/
 
+network:
+  # Host to listen to; in a cluster setup, it typically is the private
+  # network interface.
+  host: "0.0.0.0"
+
+  # Port to listen to; in a cluster setup, each worker on a machine
+  # needs to use a unique port number.
+  port: 7000
+
 gc:
   # Retention period in days, points older than this number of days
   # are automatically deleted from the database. Changing this value
