feat: add deps dir to build gtest & rocksdb which don't have easy-to-use support on Linux

--- a/prod/group_vars/all.yml
+++ b/prod/group_vars/all.yml
@@ -13,3 +13,7 @@ vpn_interface: tun0
 physical_ip: "{{ ansible_enp1s0.ipv4.address }}"
 network_mask: 24
 network_addr: 10.0.0.0
+
+# Geo BT
+
+geo_user: "geo-bt"
