feat: use ubuntu 20.04 as rocksdb/grpc++ are not botched there

--- a/prod/site.yml
+++ b/prod/site.yml
@@ -5,3 +5,6 @@
 
 - name: set up intra-cluster cluster networking
   import_playbook: network.yml
+
+- name: set up geo backtracer
+  import_playbook: geo.yml
