--- a/prod/roles/geo-bt/tasks/003-build.yml
+++ b/prod/roles/geo-bt/tasks/003-build.yml
@@ -7,18 +7,18 @@
   become: yes
   git:
     repo: "https://github.com/aimxhaisse/geo-backtracer.git"
-    dest: "bt"
+    dest: "/home/{{ geo_user }}/src"
 
 - name: "build geo-bt"
   become_user: "{{ geo_user }}"
   become: yes
   make:
-    chdir: "bt"
+    chdir: "/home/{{ geo_user }}/src"
     target: all
 
 - name: "run geo-bt tests"
   become_user: "{{ geo_user }}"
   become: yes
   make:
-    chdir: "bt"
+    chdir: "/home/{{ geo_user }}/src"
     target: test
