fix: add rocksdb deps in the cluster

--- a/prod/roles/geo-bt/tasks/002-packages.yml
+++ b/prod/roles/geo-bt/tasks/002-packages.yml
@@ -16,6 +16,7 @@
       - libsnappy-dev
       - libyaml-cpp-dev
       - libzstd-dev
+      - librocksdb-dev
       - protobuf-compiler-grpc
       - protobuf-compiler
     state: present
