--- a/prod/roles/geo-bt/tasks/main.yml
+++ b/prod/roles/geo-bt/tasks/main.yml
@@ -3,5 +3,4 @@
 - include_tasks: 001-user.yml
 - include_tasks: 002-packages.yml
 - include_tasks: 003-build.yml
-- include_tasks: 004-config.yml
-
+- include_tasks: 004-setup.yml
