--- a/prod/roles/geo-bt/tasks/004-setup.yml
+++ b/prod/roles/geo-bt/tasks/004-setup.yml
@@ -14,3 +14,10 @@
     - "{{ shards }}"
     - ['log', 'etc', 'bin', 'data']
   when: inventory_hostname in item[0].workers
+
+- name: "create worker config file"
+  template:
+    src: templates/worker.yml
+    dest: "/home/{{ geo_user }}/bt/{{ item.name }}/etc/worker.yml"
+  loop: "{{ shards }}"
+  when: inventory_hostname in item.workers
