--- a/prod/roles/geo-bt/tasks/004-setup.yml
+++ b/prod/roles/geo-bt/tasks/004-setup.yml
@@ -21,3 +21,14 @@
     dest: "/home/{{ geo_user }}/bt/{{ item.name }}/etc/worker.yml"
   loop: "{{ shards }}"
   when: inventory_hostname in item.workers
+
+- name: "install geo-bt"
+  become_user: "{{ geo_user }}"
+  become: yes
+  make:
+    chdir: "/home/{{ geo_user }}/src"
+    target: install
+    params:
+      INSTALL_DIR: "/home/{{ geo_user }}/bt/{{ item.name }}/{{ shard.name }}"
+  loop: "{{ shards }}"
+  when: inventory_hostname in item.workers
