--- a/prod/roles/geo-bt/tasks/004-setup.yml
+++ b/prod/roles/geo-bt/tasks/004-setup.yml
@@ -21,6 +21,14 @@
   loop: "{{ shards }}"
   when: inventory_hostname in item.workers
 
+- name: "generate mixer config file"
+  bt_shard:
+    geo: "{{ geo }}"
+    shards: "{{ shards }}"
+    dest: "/home/{{ geo_user }}/bt/{{ item.name }}/etc/mixer.yml"
+  loop: "{{ shards }}"
+  when: inventory_hostname in item.workers
+
 - name: "install geo-bt"
   make:
     chdir: "/home/{{ geo_user }}/src"
