--- a/prod/roles/geo-bt/templates/worker.yml
+++ b/prod/roles/geo-bt/templates/worker.yml
@@ -24,7 +24,7 @@ network:
 
   # Port to listen to; in a cluster setup, each worker on a machine
   # needs to use a unique port number.
-  port: "{{ item.port }}"
+  port: {{ item.port }}
 
 gc:
   # Retention period in days, points older than this number of days
