--- a/prod/roles/geo-bt/tasks/004-setup.yml
+++ b/prod/roles/geo-bt/tasks/004-setup.yml
@@ -26,7 +26,11 @@
     geo: "{{ geo }}"
     shards: "{{ shards }}"
     dest: "/home/{{ geo_user }}/bt/{{ item.name }}/etc/mixer.yml"
+    mixer_ip: "{{ vpn_ip }}"
+    mixer_port: "{{ 8000 + idx }}"
   loop: "{{ shards }}"
+  loop_control:
+    index_var: idx
   when: inventory_hostname in item.workers
 
 - name: "install geo-bt"
