--- a/prod/group_vars/all.yml
+++ b/prod/group_vars/all.yml
@@ -39,10 +39,26 @@ geo:
 shards:
   - name: "8a00862"
     area: "default"
+    hosts: ["gamgee", "bombadil"]
+    mixer_port: 8000
+    worker_port: 7000
+  - name: "eb3e451"
+    area: "fr"
+    hosts: ["gamgee", "treebeard"]
+    mixer_port: 8001
+    worker_port: 7001
+  - name: "735ec68"
+    area: "fr"
+    hosts: ["treebeard", "bombadil"]
+    mixer_port: 8002
+    worker_port: 7002
+
+prod_shards:
+  - name: "8a00862"
+    area: "default"
     hosts: ['beorn']
     worker_port: 7000
     mixer_port: 8000
-
   - name: "eb3e451"
     area: "fr"
     hosts: ['beorn']
