feat: add var/ directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,17 @@
 *.o
 *.pb.h
 *.pb.cc
+
+prod/playbooks/.cache
+
+
 bin/
 data/
-*.DS_Store
-prod/playbooks/.cache
 deps/
 build/
 log/
+var/
+
 *.pyc
 __pycache__
+*.DS_Store
