--- a/prod/group_vars/all.yml
+++ b/prod/group_vars/all.yml
@@ -27,8 +27,8 @@ geo:
   #
   # Tuples below are [lat, long].
   - area: "fr"
-    top_left: [-5.00, 51.00]
-    bottom_right: [7.50, 44.00]
+    bottom_left: [44.00, -5.00]
+    top_right: [51.00, 7.50]
 
   # For any point not in the previously defined areas, a dedicated
   # area is set as a default.
