feat: remove dependency on docker in cluster setups

--- a/prod/roles/geo-bt/tasks/001-user.yml
+++ b/prod/roles/geo-bt/tasks/001-user.yml
@@ -3,4 +3,4 @@
 # Setup a dedicated user to run the Geo Backtracer.
 
 - name: create unix users
-  user: name="{{ geo_user }}" append=yes state=present createhome=yes shell=/bin/bash groups=docker
+  user: name="{{ geo_user }}" append=yes state=present createhome=yes shell=/bin/bash
