--- a/prod/group_vars/all.yml
+++ b/prod/group_vars/all.yml
@@ -65,25 +65,25 @@ prod_shards:
     worker_port: 7001
     mixer_port: 8001
 
-# GP1-S
+# GP1-M
 shards:
   - name: "8a00862"
     area: "default"
-    hosts: ['aragorn', 'gandalf']
+    hosts: ['smeagol', 'arwen']
     worker_port: 7000
     mixer_port: 8000
   - name: "f3aebb4"
     area: "fr"
-    hosts: ['aragorn', 'gandalf']
+    hosts: ['smeagol', 'arwen']
     worker_port: 7001
     mixer_port: 8001
   - name: "dd4e7ff"
     area: "fr"
-    hosts: ['aragorn', 'gandalf']
+    hosts: ['smeagol', 'arwen']
     worker_port: 7002
     mixer_port: 8002
   - name: "eb3e451"
     area: "fr"
-    hosts: ['aragorn', 'gandalf']
+    hosts: ['smeagol', 'arwen']
     worker_port: 7003
     mixer_port: 8003
