--- a/etc/mixer.yml
+++ b/etc/mixer.yml
@@ -10,6 +10,17 @@ instance_type: "mixer"
 # minutes.
 backoff_fail_fast: false
 
+correlator:
+  # Two points close enough in time will be considers at the same
+  # moment, this shouldn't be relied on a lot, the client should
+  # synchronize clocks (using GPS time) so that they fetch points at
+  # around the same moment, doing so on the client increases the
+  # accuracy as moving users can be correlated.
+  nearby_seconds: 30
+
+  # About 4.4 meters (this is the precision of GPS coordinates).
+  nearby_gps_distance: 0.000004
+
 network:
   host: 127.0.0.1
   port: 8000
